# gici-open

./: .gitignore  README.md
include/gici/estimate/: ceres_iteration_callback.h  common_parameter_block.h  const_error.h  error_interface.h  estimating.h  estimator_base.h  estimator_types.h  graph.h  homogeneous_point_local_parameterization.h  homogeneous_point_parameter_block.h  local_parameterization_additional_interfaces.h  marginalization_error.h  marginalization_error_impl.h  motion_detector.h  parameter_block.h  pose_error.h  pose_local_parameterization.h  pose_parameter_block.h  relative_const_error.h  relative_integration_error.h  speed_and_bias_parameter_block.h
include/gici/fusion/: gnss_imu_camera_srr_estimator.h  gnss_imu_initializer.h  gnss_imu_lc_estimator.h  multisensor_estimating.h  multisensor_initializer_base.h  multisensor_single_thread_estimating.h  ppp_imu_camera_rrr_estimator.h  ppp_imu_tc_estimator.h  rtk_imu_camera_rrr_estimator.h  rtk_imu_tc_estimator.h  spp_imu_camera_rrr_estimator.h  spp_imu_tc_estimator.h
include/gici/gnss/: ambiguity_common.h  ambiguity_error.h  ambiguity_resolution.h  code_bias.h  code_phase_maps.h  dgnss_estimator.h  differential_measurement_align.h  doppler_error.h  geodetic_coordinate.h  gnss_common.h  gnss_const_errors.h  gnss_estimator_base.h  gnss_loose_estimator_base.h  gnss_parameter_blocks.h  gnss_relative_errors.h  gnss_types.h  phase_bias.h  phase_center.h  phase_windup.h  phaserange_error.h  phaserange_error_dd.h  phaserange_error_sd.h  position_error.h  ppp_estimator.h  (+8 more)
option/: CAS0MGXRAP_20231410000_01D_01D_DCB.BSX  data_broadcast.yaml  data_storage.yaml  format_conversion_and_broadcast.yaml  format_conversion_and_storage.yaml  post_estimation_PPP_RRR.yaml  post_estimation_PPP_rinex_sp3.yaml  post_estimation_RTK_RRR.yaml  post_estimation_RTK_RRR_rinex_imutext.yaml  pseudo_real_time_estimation_DGNSS.yaml  pseudo_real_time_estimation_LC.yaml  pseudo_real_time_estimation_PPP.yaml  pseudo_real_time_estimation_PPP_RRR.yaml  pseudo_real_time_estimation_PPP_TC.yaml  pseudo_real_time_estimation_RTK.yaml  pseudo_real_time_estimation_RTK_RRR.yaml  pseudo_real_time_estimation_RTK_TC.yaml  pseudo_real_time_estimation_SDGNSS.yaml  pseudo_real_time_estimation_SPP.yaml  pseudo_real_time_estimation_SPP_RRR.yaml  pseudo_real_time_estimation_SPP_TC.yaml  pseudo_real_time_estimation_SRR.yaml  real_time_estimation.yaml
ros_wrapper/src/gici/: CMakeLists.txt  package.xml
ros_wrapper/src/gici/include/gici/ros_interface/: ros_node_handle.h  ros_publisher.h  ros_stream.h  ros_types.h
ros_wrapper/src/gici/launch/: gici_rtk_rrr.launch.py
ros_wrapper/src/gici/msg/: GnssEphemeris.msg  GnssObservation.msg
ros_wrapper/src/gici/option/: publish_data_to_ros_topics.yaml  ros_real_time_estimation_DGNSS.yaml  ros_real_time_estimation_LC.yaml  ros_real_time_estimation_PPP.yaml  ros_real_time_estimation_RTK.yaml  ros_real_time_estimation_RTK_RRR.yaml  ros_real_time_estimation_RTK_TC.yaml  ros_real_time_estimation_SDGNSS.yaml  ros_real_time_estimation_SPP.yaml  ros_real_time_estimation_SPP_RRR.yaml  ros_real_time_estimation_SPP_TC.yaml  ros_real_time_estimation_SRR.yaml
ros_wrapper/src/gici/rviz/: gici_gic.rviz
ros_wrapper/src/gici/src/: gici_ros_main.cpp
ros_wrapper/src/gici/src/ros_interface/: ros_node_handle.cpp  ros_publisher.cpp  ros_stream.cpp
src/: gici_main.cpp
src/estimate/: ceres_iteration_callback.cpp  error_interface.cpp  estimating.cpp  estimator_base.cpp  estimator_types.cpp  graph.cpp  homogeneous_point_local_parameterization.cpp  homogeneous_point_parameter_block.cpp  local_parameterization_additional_interfaces.cpp  marginalization_error.cpp  motion_detector.cpp  pose_error.cpp  pose_local_parameterization.cpp  pose_parameter_block.cpp  speed_and_bias_parameter_block.cpp
src/fusion/: gnss_imu_camera_srr_estimator.cpp  gnss_imu_initializer.cpp  gnss_imu_lc_estimator.cpp  multisensor_estimating.cpp  multisensor_single_thread_estimating.cpp  ppp_imu_camera_rrr_estimator.cpp  ppp_imu_tc_estimator.cpp  rtk_imu_camera_rrr_estimator.cpp  rtk_imu_tc_estimator.cpp  spp_imu_camera_rrr_estimator.cpp  spp_imu_tc_estimator.cpp
src/gnss/: ambiguity_common.cpp  ambiguity_error.cpp  ambiguity_resolution.cpp  ambiguity_resolution_differential.cpp  code_bias.cpp  dgnss_estimator.cpp  doppler_error.cpp  geodetic_coordinate.cpp  gnss_common.cpp  gnss_estimator_base.cpp  gnss_estimator_base_differential.cpp  gnss_estimator_base_logger.cpp  gnss_loose_estimator_base.cpp  gnss_types.cpp  phase_bias.cpp  phase_windup.cpp  phaserange_error.cpp  phaserange_error_dd.cpp  phaserange_error_sd.cpp  position_error.cpp  ppp_estimator.cpp  pseudorange_error.cpp  pseudorange_error_dd.cpp  pseudorange_error_sd.cpp  relative_isb_error.cpp  rtk_estimator.cpp  sdgnss_estimator.cpp  spp_estimator.cpp  velocity_error.cpp
src/imu/: hmc_error.cpp  imu_common.cpp  imu_error.cpp  imu_estimator_base.cpp  nhc_error.cpp  roll_and_pitch_error.cpp  speed_and_bias_error.cpp  yaw_error.cpp
src/stream/: data_integration.cpp  file_reader.cpp  files_reading.cpp  formator.cpp  formator_gnss_common.cpp  node_handle.cpp  streamer.cpp  streaming.cpp
src/utility/: common.cpp  global_variable.cpp  node_option_handle.cpp  option.cpp  signal_handle.cpp  spin_control.cpp  transform.cpp
src/vision/: feature_handler.cpp  feature_matcher.cpp  feature_tracker.cpp  homogeneous_point_error.cpp  relative_pose_error.cpp  visual_estimator_base.cpp  visual_initialization.cpp
tools/ros/src/gici_messages/: CMakeLists.txt  package.xml
tools/ros/src/gici_tools/: CMakeLists.txt  package.xml
tools/ros/src/gici_tools/include/gici/ros_utility/: edit_timestamp_utility.h  nmea_formator.h  ros_publisher.h  ros_types.h
tools/ros/src/gici_tools/option/: convert_rosbags.yaml
tools/ros/src/gici_tools/src/: gici_files_to_rosbag.cpp  imagepack_to_rosbag.cpp  imupack_to_rosbag.cpp  nmea_to_rosbag_navsatfix.cpp  publish_ie_poses.cpp  publish_nmea_poses.cpp  publish_tum_poses.cpp
tools/ros/src/gici_tools/src/ros_utility/: edit_timestamp_utility.cpp  nmea_formator.cpp  ros_publisher.cpp
(+42 files in other folders)
