<?xml version="1.0"?>
<package format="3">
  <name>gici_tools</name>
  <version>1.0.0</version>
  <description>gici_tools</description>
  <license>BSD</license>
  <maintainer email="chichengcn@sjtu.edu.cn">Cheng Chi</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>rosbag2_cpp</depend>
  <depend>gici_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
